--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "seed": "mysql --defaults-extra-file=creds.txt < schema.sql && node database/dataCreator.js"
   },
   "dependencies": {
-    "Faker": "^0.7.2",
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "file-loader": "^3.0.1",
     "jquery": "^3.3.1",
-    "mysql": "^2.16.0",
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.3",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -31,7 +31,6 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "webpack": "^4.29.1",
     "webpack-cli": "^3.2.3"
   }
